<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="#a6d07d"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="50dp"
            card_view:cardBackgroundColor ="#fff5da">

                <ImageView
                    android:id="@+id/iv_activity_icon"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-30dp"
                    android:contentDescription="@string/iconDescription" />

                <TextView
                    android:id="@+id/tv_activity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_activity_description"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/ib_previous_screen"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_marginTop="-60dp"
            android:layout_marginLeft="-120dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginStart="-160dp"
            android:background="#0000"
            android:contentDescription="@string/previousScreenDescription" />

        <ImageButton
            android:id="@+id/ib_next_screen"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_marginTop="-50dp"
            android:layout_marginLeft="120dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_marginStart="160dp"
            android:background="#0000"
            android:contentDescription="@string/nextScreenDescription" />

</LinearLayout>